--- a/capitulo1.tex
+++ b/capitulo1.tex
@@ -82,7 +82,7 @@ Um pouco de texto\ldots
 	Para todo $\eps>0$ e para todo inteiro positivo $k_0$, existe $K_0 = K_0(\eps,k_0)$ tal que a seguinte afirmação é verdadeira: Para todo grafo $G$, existe uma partição $V(G) = V_0\cup V_1\cup\dots\cup V_k$ tal que 
 	\begin{enumerate}
 		\item $k_0\leq k\leq K_0$;
-		\item $|V_0|\leq K_0$;
+		\item $|V_0| < K_0$;
 		\item $|V_1| = |V_2| = \dots = |V_k|$;
 		\item dentre os $k\choose 2$ pares $(V_i, V_j)$ com $1\leq i<j$, há menos de $\eps {k\choose 2}$ deles que não são $\eps$-regulares.
 	\end{enumerate}
@@ -214,12 +214,29 @@ Um pouco de texto\ldots
 	\[
 		|V_1'| - |V_3'| \geq |V_1| - |V_3| - l \geq |V_1| - 2|V_3| \geq 5\,,
 	\]
-	donde $|V_1'|\geq 5 + |V_3'|$ (e, analogamente, $|V_2'|\geq 5 + |V_3'|$). Note também que foi construído ao longo do processo um caminho $x_1\dots x_m$ azul passando por todos os vértices de $V_4'$, tal que todas as arestas de $x_1$ a $V_2'$ e todas as arestas de $x_m$ a $V_1'$ são azuis (em particular, $x_1\in V_2$ pois, em todos os casos, o primeiro vértice adicionado ao caminho é um vértice de $V_2$).
+	donde $|V_1'|\geq 5 + |V_3'|$ (e, analogamente, $|V_2'|\geq 5 + |V_3'|$). Note também que foi construído ao longo do processo um caminho $x_1\dots x_m$ azul passando por todos os vértices de $V_4'$, tal que todas as arestas de $x_1$ a $V_1'$ e todas as arestas de $x_m$ a $V_2'$ são azuis (em particular, $x_1\in V_2$ pois, em todos os casos, o primeiro vértice adicionado ao caminho é um vértice de $V_2$).
 	
-	Seja $n_i = |V_i'|$ para $i=1,2,3$, e suponha, sem perda de generalidade, que $n_1\geq n_2$.
+	Seja $n_i = |V_i'|$ para $i=1,2,3$, e suponha, sem perda de generalidade, que $n_1\geq n_2$. A partir daqui, o argumento se separa de acordo com os casos abaixo. Por exemplo, se $n_1-n_2 = n_3$, então podemos separar $W_1'\subseteq V_1'$ com $|W_i'| = n_1-n_2$ e tomar $C^r$ como sendo um circuito hamiltoniano vermelho no subgrafo bipartido completo entre $V_3'$ e $W_1'$, e $C^b$ como um circuito azul percorrendo primeiro o caminho $x_1\dots x_m$ e alternando entre vértices de $V_2'$ e $V_1'\setminus W_1'$. De forma geral, temos:
+	
+	\begin{caso}
+		$n_1 - n_2\leq n_3$.\\		
+		Se $n_3 - n_1 + n_2$ é par, então tome $W_1'\subseteq V_1'$ e $W_2'\subseteq V_2'$ com $|W_1'| = n_1 - n_2 + \frac{n_3 - n_1 + n_2}{2}$ e $|W_2'| = \frac{n_3 - n_1 + n_2}{2}$. Como $|W_1'\cup W_2'| = n_3 = |V_3'|$, existe um circuito vermelho no subgrafo bipartido completo vermelho entre $V_3'$ e $W_1'\cup W_2'$, e um circuito azul cobrindo o restante dos vértices (percorra o caminho $x_1\dots x_m$ primeiro e alterne entre vértices de $V_2'\setminus W_2'$ e $V_1'\setminus W_1'$).
+		
+		Por outro lado, se $n_3 - n_1 + n_2$ é ímpar, então consideramos o seguinte argumento. Considere uma aresta $e = \{u_1, u_2\}\subseteq V_1'$ qualquer (note que $n_1\geq5>2$, logo $e$ existe). Se $e$ é azul, então fazemos o argumento anterior para $n_1-1$ no lugar de $n_1$ (tomando $W_1'\subseteq V_1'\setminus\{u_1, u_2\}$) e, para o circuito azul, começamos pela aresta $u_1u_2$ e então percorremos o caminho $x_1\dots x_m$ e alternamos entre $V_2'$ e $V_1'$.
+		Caso contrário, se $e$ é vermelha, então, para $n_3\geq2$, tome $e\subseteq W_1'\subseteq V_1'$ e $W_2'\subseteq V_2'$ com $|W_1'| = (n_1 + 1) - n_2 + \frac{n_3 - (n_1+1) + n_2}{2}$ e $|W_2'| = \frac{n_3 - n_1 + n_2 + 1}{2}$ (é possível tomar $e\subseteq W_1'$ pois $|W_1'| = \frac{n_1 - n_2 + n_3 + 1}{2}\geq \frac{n_3 + 1}{2}>1$). Note que $|V_1'\setminus W_1'| = |V_2'\setminus W_2'| = \frac{n_1 + n_2 - n_3 - 1}{2}$. Logo existe um circuito azul cobrindo $(V_1'\setminus W_1')\cup(V_2'\setminus W_2')\cup V_4'$. Para construir um circuito vermelho $C^r$ com $V(C^r) = V_3'\cup W_1' \cup W_2'$, basta começar por $u_1u_2$ e alternar entre $V_3'$ e $W_1'\cup W_2'$. Se $n_3 = 1$, então $n_1 = n_2$ e faça $C^r$ como o único vértice em $V_3'$ e $C^b$ começando pelo caminho $x_1\dots x_m$ e alternando entre $V_2'$ e $V_1'$.
+	\end{caso} 
+	\begin{caso}
+		$n_1 - n_2 > n_3$.\\
+		Aqui, vamos considerar os tamanhos dos circuitos vermelhos contidos em $V_1'$.
+		
+		Primeiro, suponha que $V_1'$ contém um circuito vermelho $C_1'$ de tamanho $n_1 - n_2$. Então note que podemos tomar $C^b$ como sendo um circuito com $V(C^b) = (V_1'\setminus V(C_1'))\cup V_2'\cup V_4'$, e $C^r$ como um circuito começando de um vértice de $C_1'$, alternando entre $V(C_1')$ e $V_3'$ até percorrer todos os vértices de $V_3'$, e terminando de percorrer os vértices de $C_1'$ até fechar o circuito.
+		
+		Agora, suponha que todos os circuitos vermelhos em $V_1'$ têm tamanho menor que $n_1 - n_2$. Pelo Lema \ref{lema:gyarfas} aplicado no grafo completo nos vértices em $V_1'$, existem um circuito vermelho $\tilde{C}^r$ e um caminho azul $P^b$ tal que $V_1' = V(\tilde{C}^r)\cup V(P^b)$ é uma partição. 
+	\end{caso}
 \end{proof}
 
 \begin{fato}
+	\label{fato:caminhos_vermelhos}
 	Seja $k$ inteiro positivo, e $n\geq 120k^3$. Considere uma coloração arbitrária das arestas de $K_n$ em vermelho e azul. Suponha que não existe partição de $V(K_n)$ em $V_1$, $V_2$ e $V_3$ satisfazendo as condições do Lema \ref{lema:bipartido_azul}. Então, se $S_1, \dots, S_l$, $T_1, \dots, T_l\subseteq V(K_n)$ são conjuntos disjuntos com $l\geq2$, onde $|S_i|, |T_i|\geq n/2k$ para $i\in \{1, \dots, l\}$, existem caminhos vermelhos $P_1, \dots, P_l$, vértice-disjuntos, cada um de comprimento no máximo $10k$, tal que cada $P_i$ tem um extremo em $S_i$ e outro em $T_i$.
 \end{fato}
 
@@ -248,6 +265,52 @@ Um pouco de texto\ldots
 	Como $(l-1)(10k+1)\leq l\cdot10k\leq 10k^2$ e $\frac{3n}{10k}\geq 5 + 3\cdot10k^2 \Leftrightarrow 3n\geq 50k + 300k^3\Leftrightarrow n\geq \frac{50k}{3} + 100k^3$ vale quando $n\geq 120k^3$, temos que $|V_1|\geq 5 + 2|V_3|$. Como $|V_2|\geq |T_j\setminus W|$, temos também que $|V_2|\geq 5 + 2|V_3|$. Logo $V_1, V_2$ e $V_3$ particionam $V(K_n)$ satisfazendo as condições do Lema \ref{lema:bipartido_azul}, contradição.
 \end{dem}
 
+\section{Demonstração do Teorema \ref{teo_principal}}
+
+Sejam $\eps = 10^{-60}$ e $k_0 = 2/\eps$. Seja $K_0 = K_0(\eps, k_0)$ a constante garantida pelo Lema da Regularidade de Szemerédi. Vamos provar que o Teorema \ref{teo_principal} é verdade para $n_0 = 120K_0^3$.
+
+Seja $n\geq n_0$ e considere uma coloração arbitrária das arestas de $K_n$ em vermelho e azul. Vamos provar que existe uma partição de $V(K_n)$ em dois circuitos monocromáticos, um vermelho e outro azul.
+
+Seja $R$ o grafo induzido pelas arestas vermelhas e $B$ o induzido pelas arestas azuis. Vamos supor, sem perda de generalidade, que o número de arestas vermelhas é maior ou igual ao número de arestas azuis, ou seja, que pelo menos metade das arestas são vermelhas, i.e. $E(R)\geq \frac{1}{2}\binom{n}{2}$. 
+Se a coloração das arestas de $K_n$ satisfaz as hipóteses do Lema \ref{lema:bipartido_azul}, então existe a partição desejada e não há mais nada o que fazer. Logo, podemos supor que isso não ocorre, de modo que podemos usar o Fato \ref{fato:caminhos_vermelhos} para $k\leq K_0$.
+
+Começamos aplicando o Lema da Regularidade de Szemerédi para $G = R$, obtendo uma partição $(\eps, \hat{k}, R)$-regular $\hat{\Pi} = (\hat{V}_0, \hat{V}_1, \dots, \hat{V}_{\hat{k}})$, com $k_0\leq \hat{k}\leq K_0$. Lembre que um par $(\eps, R)$-regular é também $(\eps, B)$-regular; vamos dizer que tais pares são \emph{regulares}. Sobre $\hat{\Pi}$, temos que:
+\begin{align*}
+	&|\hat{V}_0|<K_0\leq \frac{n}{120K_0^2}<\eps n\,;\\
+	&\Big|\Big\{\{i,j\}\in\binom{[\hat{k}]}{2}: (\hat{V}_i, \hat{V}_j) \text{ não é regular}\Big\}\Big| \leq \eps\binom{\hat{k}}{2}\leq \eps\frac{\hat{k}^2}{2}\,.
+\end{align*}
+
+%Vamos começar aplicando o Lema da Regularidade de Szemerédi para $G = R$. 
+
+Apesar de $\hat{\Pi}$ ter poucos pares não-regulares, podem haver $\hat{V}_i$'s que são não-regulares com, por exemplo, todos os outros $\hat{V}_j$'s. Vamos tirar esses $\hat{V}_i$'s que são não-regulares com muitos outros $\hat{V}_j$'s da partição e colocá-los em $\hat{V}_0$. Mais especificamente, seja $\bar{V}_0$ o conjunto formado pela união de $\hat{V}_0$ com os $\hat{V}_i$ que são não-regulares com mais de $2\eps^{1/2}(1-\eps^{1/2})\hat{k}$ outros $\hat{V}_j$, e sejam $\bar{V}_1, \dots, \bar{V}_k$ os $\hat{V}_i$ que sobraram. Temos então uma partição $\bar{\Pi} = (\bar{V}_0, \bar{V}_1, \dots, \bar{V}_k)$ com $k\leq \hat{k}$. Como a quantidade de pares não-regulares é menor que $\eps\hat{k}^2/2$, a quantidade de $\hat{V}_i$'s que entraram em $\bar{V}_0$ é no máximo
+\[
+	\frac{\eps\hat{k}^2}{2\eps^{1/2}(1-\eps^{1/2})\hat{k}} = \frac{\eps^{1/2}\hat{k}}{2(1-\eps^{1/2})} = \eps^{1/2}\hat{k}\,.
+\]
+Logo $k\geq(1-\eps^{1/2})\hat{k}>\frac{\hat{k}}{2}\geq 1/\eps$, e cada $\bar{V}_i$ é não-regular com no máximo $2\eps^{1/2}(1-\eps^{1/2})\hat{k} < 2\eps^{1/2}k$ outros $\bar{V}_j$. Por fim, $|\bar{V}_0|\leq \eps n + \eps^{1/2}\hat{k}\frac{n}{\hat{k}}<2\eps^{1/2}n$.
+
+Vamos colorir os pares $\{i,j\}$, $1\leq i<j\leq k$ em três cores de acordo com o par $(\bar{V}_i, \bar{V}_j)$. Diremos que $\{i, j\}$ é:
+\begin{itemize}
+	\item preto, se $(\bar{V}_i, \bar{V}_j)$ é não-regular;
+	\item vermelho, se $(\bar{V}_i, \bar{V}_j)$ é regular com $e_R(\bar{V}_i, \bar{V}_j)\geq 0.2|\bar{V}_i||\bar{V}_j|$;
+	\item azul, se $(\bar{V}_i, \bar{V}_j)$ é regular com $e_B(\bar{V}_i, \bar{V}_j)>0.8|\bar{V}_i||\bar{V}_j|$.
+\end{itemize}
+
+Seja $\Gamma_R$ o grafo reduzido dado pelos pares vermelhos, isto é, $V(\Gamma_R) = \{1,\dots, k\}$ e $E(\Gamma_R) = \{\{i,j\}\in \binom{[k]}{2}: \{i,j\} \text{ é vermelho}\}$. Vamos provar que $e(\Gamma_R)\geq0.185k^2$.
+Como estamos supondo $e(R)\geq \frac{1}{2}\binom{n}{2}$, vamos limitar por cima a quantidade de arestas em $R$ de acordo com a partição $\bar{\Pi}$. Contando arestas vermelhas, temos então:
+\begin{itemize}
+	\item[] Dentro de $\bar{V}_1, \dots, \bar{V}_k$: $~\leq k \binom{n/k}{2} < \frac{n^2}{2k} < \frac{\eps}{2}n^2$\,;
+	\item[] Dentro de $\bar{V}_0$: $~\leq \binom{|\bar{V}_0|}{2}\leq \binom{2\eps^{1/2}n}{2} < 2\eps n^2$\,;
+	\item[] Entre $\bar{V}_0$ e $\bar{V}_1,\dots, \bar{V}_k$: $~\leq |\bar{V}_0||\bar{V}_1\cup\dots\cup \bar{V}_k| \leq 2\eps^{1/2}n\cdot n = 2\eps^{1/2}n^2$\,;
+	\item[] Em pares não-regulares: $\leq 2\eps k^2\cdot \left(\frac{n}{k}\right)^2 = \eps n^2$\,;
+	\item[] Em pares azuis: $\leq \big[\binom{k}{2} - e(\Gamma_R)\big]\cdot 0.2 \cdot \left(\frac{n}{k}\right)^2 < 0.2\frac{n^2}{2} - \frac{e(\Gamma_R)}{5}\left(\frac{n}{k}\right)^2 = \frac{n^2}{10} - \frac{e(\Gamma_R)}{5}\left(\frac{n}{k}\right)^2$\,;
+	\item[] Em pares vermelhos: $~\leq e(\Gamma_R)\left(\frac{n}{k}\right)^2$\,.
+\end{itemize}
+Logo 
+\begin{align*}
+	&\left(\frac{\eps}{2} + 2\eps + 2\eps^{1/2} + \eps\right)n^2 + \frac{n^2}{10} + \frac{4}{5}e(\Gamma_R)\left(\frac{n}{k}\right)^2\geq \frac{1}{2}\binom{n}{2}\\
+	&\Longrightarrow  \frac{4}{5}e(\Gamma_R)\left(\frac{n}{k}\right)^2\geq n^2\left(\frac{1}{4} - \frac{1}{10} - 3\eps^{1/2}\right)\,.
+\end{align*}
+Portanto, $e(\Gamma_R)\geq \frac{5}{4}\big(\frac{1}{4} - \frac{1}{10} - 3\eps^{1/2}\big)k^2 > 0.185k^2$.
 \begin{obs}
   Uma observação.
 \end{obs}
