Adicionado ambiente Caso

--- a/monografia_preambulo.tex
+++ b/monografia_preambulo.tex
@@ -32,6 +32,7 @@
 \theoremstyle{definition}
 \newtheorem{defi}[teo]{Definição}
 \newtheorem{obs}[teo]{Observação}
+\newtheorem{caso}{Caso}
 
 \newenvironment{dem}{\begin{proof}[{\bf Demonstração:}]}{\end{proof}}
 % ---------------------------------------------------------------------------- %
